[gd_scene load_steps=2 format=3 uid="uid://duyq1o2sepr1o"]

[ext_resource type="Script" path="res://scripts/components/enemy_components.gd" id="1_rt3ph"]

[node name="EnemyComponents" type="Node2D"]
script = ExtResource("1_rt3ph")
hitbox = NodePath("Hitbox")

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="taking_damage" from="." to="." method="_on_taking_damage"]
